--- a/public/style.css
+++ b/public/style.css
@@ -682,7 +682,7 @@ div.descWhy {
     padding-left: 7vw;
     margin-top: 3vh;
 }
-.button-tentangkami-contactus{
+.button-tentangkami-contactus a{
     display: inline-block;
     background: #18a4fc;
     color: #fff;
@@ -690,6 +690,7 @@ div.descWhy {
     font-size: 16px;
     padding: 8px 15px;
     margin-top: 20px;
+    margin-bottom: 60px;
     border-radius: 6px;
     border: 2px solid #18a4fc;
     transition: all 0.3s ease;
@@ -697,15 +698,11 @@ div.descWhy {
     cursor: pointer;
     text-decoration: none;
 }
-.button-tentangkami-contactus:hover{
+.button-tentangkami-contactus a:hover{
     color: #18a4fc;
     background: none;
 }
-.linkWhatsapp{
-    margin-left: 7vw;
-    margin-top: 25px;
-    text-decoration: none;
-}
+
 /* MEMBERSHIP =============================================================================================== */
 /* platinum card animation on hover */
 #container{
@@ -1221,29 +1218,23 @@ button, input, optgroup, select, textarea {
     display: flex;
 }
 #profil #memberupdate h3{
-    margin-top: 20px;
+    margin-top: 35px;
     font-weight: bold;
     font-size: 17px;
     margin-right: 20px;
 }
-#profil #box-gambar #memberupdate #Perbarui{
+#profil #box-gambar #memberupdate #Perbarui a{
     display: inline-block;
     background: #18a4fc;
     color: #fff;
     font-weight: bold;
     font-size: 17px;
     padding: 5px 30px;
-    margin-top: 10px;
+    margin-top: 25px;
     border-radius: 6px;
     border: 2px solid #18a4fc;
-}
-#profil #box-gambar #memberupdate #Perbarui a{
     text-decoration: none;
     color: white;
-}
-#profil #box-gambar #memberupdate #Perbarui:hover{
-    color: #18a4fc;
-    background: none;
 }
 #profil #box-gambar #memberupdate #Perbarui a:hover{
     color: #18a4fc;
@@ -1276,7 +1267,7 @@ button, input, optgroup, select, textarea {
 #profil #box-gambar{
     display: flex;
     flex-direction: column;
-    margin-top: 10vh;
+    margin-top: 5vh;
     margin-right: 20vw;
 }
 #profil #box-gambar #textmembership h5{
@@ -1289,6 +1280,9 @@ button, input, optgroup, select, textarea {
 }
 #profil .col-sm-2 {
     width: 100%;
+}
+#profil #box-gambar #memberupdate {
+    margin-top: 1vh;
 }
 /* pickup =============================================================================================== */
 #pickup{
@@ -1321,7 +1315,7 @@ button, input, optgroup, select, textarea {
 #pickup #paragraft2 #permintaan{
     display: flex;
     flex-direction: row;
-    margin-left: 550px;
+    margin-left: 570px;
     margin-top: 65px;
 }
 #pickup #paragraft2 h1{
@@ -1436,7 +1430,8 @@ button, input, optgroup, select, textarea {
     overflow-x: hidden;
 }
 #payment #paymentbox2{
-    position: fixed;
+    /* position: fixed; */
+    margin-left: 4vw;
 }
 #payment #paymentbox1 h1{
     font-weight: bolder;
@@ -1541,11 +1536,30 @@ input[type=radio] + label>img {
     margin-right: 1vw;
 }
 #payment #paymentbox1 .kotak #paragraf .aturtext h5{
-    font-size: 17px;
-    font-weight: bold;
+    font-size: 18px;
+    font-weight: bolder;
 }
 #payment #paymentbox1 .kotak #paragraf {
     margin-left: -1.2vw;
+}
+#payment #paymentbox1 .kotak #paragraf #kotakkanan{
+    display: flex;
+    width: 55vw;
+}
+#payment #paymentbox1 .kotak #paragraf .aturtext{
+    margin-left: 1vw;
+}
+#payment #paymentbox1 .kotak #paragraf .aturtext #abu{
+    margin-top: -2vh;
+    margin-bottom: 0.5vh;
+}
+#payment #paymentbox1 .kotak #paragraf .aturtext #flexkanan{
+    display: flex;
+    justify-content: space-between;
+    font-weight: bolder;
+}
+#payment #paymentbox1 .kotak #paragraf .aturtext #flexkanan h6{
+    color: grey;
 }
 /* ini payment membership ============================================================================= */
 #paymentmembership{
@@ -1666,7 +1680,6 @@ input[type=radio] + label>img {
 #accordionLaundryku {
     width: 65vw;
     margin-left: 17.5vw;
-    height: 450px;
 }
 #accordionButton{
     display: flex;
@@ -1723,7 +1736,7 @@ input[type=radio] + label>img {
     margin-left: 5px;
 }
 .panel {
-    margin-top: 10px;
+    margin-top: 5px;
     padding: 0px 30px;
     background-color: white;
     max-height: 0;
@@ -1737,17 +1750,19 @@ input[type=radio] + label>img {
 }
 #statusL{
     display: flex;
-    flex-direction: row
+    flex-direction: row;
+    margin-top: -5px;
 }
 #statusLBold{
     font-weight: bold;
 }
 #tanggalL{
     display: flex;
-    flex-direction: row
+    flex-direction: row;
 }
 #tanggalLBold{
     font-weight: bold;
+
 }
 #Sebelumnya h2{
     font-size: 30px;
@@ -1780,14 +1795,11 @@ input[type=radio] + label>img {
 }
 
 #textLaundryku1{
-    margin-top: -5px;
-    font-size: 29px;
+    font-size: 32px;
 }
 
 #textLaundryku2{
-    transform: translate(-341px,33px);
-    z-index: -1;
-    font-size: 15px;
+    text-align: center;
 
 }
 /* ini admin check order=============================================================================== */
