--- a/public/style.css
+++ b/public/style.css
@@ -1910,3 +1910,15 @@ input[type=radio] + label>img {
     color:  #18a4fc;
     background: none;
 }
+/* INI RECOVERY PASSWORD ============================================================ */
+#recoverypass #page h3{
+    font-weight: 100;
+    text-align: justify;
+}
+#recoverypass #page{
+    margin-left: 25vw;
+    margin-right: 25vw;
+}
+#recoverypass #page #image{
+    text-align: center;
+}
