--- a/public/style.css
+++ b/public/style.css
@@ -781,7 +781,7 @@ div.descWhy {
     width: 90%;
 }
 #login .btn{
-    margin-left: 6.1vw;
+    margin-left: 6.4vw;
     padding: 0.375rem 3.75rem;
     border-radius: 0.6rem;
 }
@@ -794,10 +794,12 @@ div.descWhy {
 }
 #login .form-control{
     padding: 0.5vh;
-    padding-right: 6vw;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
     box-shadow: none;
+    padding-left: 0.5vw;
+    padding-right: 1.5vw;
+    margin-right: 6vw;
 }
 #login .col-form-label{
     font-family: Nunito;
@@ -818,11 +820,14 @@ button, input, optgroup, select, textarea {
 }
 #login .box-login .box-akun{
     padding-top: 2vh;
-    padding-left: 6vw;
+    padding-left: 6.4vw;
 }
 #login .box-login .box-akun a{
     text-decoration-color: black;
     color: black;
+}
+#login .box-login .box-akun .password{
+    margin-top: 0.5vw;
 }
 #login .form-check-input:checked {
     background-color: #18a4fc;
@@ -843,15 +848,15 @@ button, input, optgroup, select, textarea {
     z-index: 2;
 }
 #login form i {
-    margin-left: 270px;
+    margin-left: 295px;
     cursor: pointer;
     display: flex;
     margin-top: -25px;
 }
 .alertalert-successalert-block {
     padding: 20px;
-    background-color: #4ae257cc;
-    color: rgb(36, 102, 52);
+    background-color: #a3f478;    ;
+    color: #22b04c;
 }
 .alertalert-successalert-block .button {
     margin-left: 15px;
@@ -865,8 +870,8 @@ button, input, optgroup, select, textarea {
   }
   .alertalert-dangeralert-dismissiblefadeshow{
     padding: 20px;
-    background-color: #eb2a2acc;
-    color: white;
+    background-color: #fe8787;
+    color: #870015;
   }
   .alertalert-dangeralert-dismissiblefadeshow .button {
     margin-left: 15px;
@@ -901,10 +906,11 @@ button, input, optgroup, select, textarea {
 }
 #recovery .form-control{
     padding: 0.5vh;
-    padding-right: 6vw;
+    margin-right: 6vw;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
     box-shadow: none;
+    padding-left: 0.5vw;
 }
 #recovery .btn-primary:hover{
     color: #18a4fc;
@@ -948,7 +954,7 @@ button, input, optgroup, select, textarea {
     width: 90%;
 }
 #signup .btn{
-    margin-left: 6.1vw;
+    margin-left: 6.4vw;
     padding: 0.375rem 3.75rem;
     border-radius: 0.6rem;
 }
@@ -961,10 +967,12 @@ button, input, optgroup, select, textarea {
 }
 #signup .form-control{
     padding: 0.5vh;
-    padding-right: 6vw;
     border: 2px solid #18a4fc;
     border-radius: 0.6rem;
     box-shadow: none;
+    padding-left: 0.5vw;
+    padding-right: 1.5vw;
+    margin-right: 6vw;
 }
 #signup .col-form-label{
     font-family: Nunito;
@@ -989,6 +997,7 @@ button, input, optgroup, select, textarea {
 }
 #signup .box-login .box-akun h6{
     color: black;
+    margin-left: 0.5vw;
 }
 
 #signup .box-login .box-akun a{
@@ -996,7 +1005,7 @@ button, input, optgroup, select, textarea {
     color: black;
 }
 #signup form i {
-    margin-left: 270px;
+    margin-left: 295px;
     cursor: pointer;
     display: flex;
     margin-top: -25px;
@@ -1289,6 +1298,7 @@ button, input, optgroup, select, textarea {
     padding-top: 50px;
     display: flex;
     height: 500px;
+    justify-content: space-between;
 }
 #pickup #paragraft h1{
     padding-top: 80px;
@@ -1423,6 +1433,18 @@ button, input, optgroup, select, textarea {
 }
 #pickup #paragraft{
     margin-left: 1vw;
+}
+#pickup #paragraft2 {
+    align-items: center;
+    border-radius: 10px;
+    border: 4px solid #18a4fc;
+    width: 46vw;
+    height: 325px;
+    padding: 20px;
+    background-color: white;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    margin-right: 5vw;
 }
 /* ini paymenttt ======================================================================================*/
 #payment{
