--- a/public/style.css
+++ b/public/style.css
@@ -1328,30 +1328,6 @@ button, input, optgroup, select, textarea {
     margin-left: 570px;
     margin-top: 65px;
 }
-#pickup #paragraft2 h1{
-    padding-left: 100px;
-    font-size: 24px;
-    font-weight: bold;
-    position: absolute;
-    left: 45%;
-    top: 30%;
-}
-#pickup #paragraft2 h2{
-    padding-left: 50px;
-    font-size: 18px;
-    position: absolute;
-    top: 40%;
-    left: 48.5%;
-    font-weight: bolder;
-}
-#pickup #paragraft2 h3{
-    padding-left: 50px;
-    font-size: 18px;
-    position: absolute;
-    top: 45%;
-    left: 48.5%;
-    font-weight: bolder;
-}
 #pickup .box-login{
     margin-top: 5vh;
     margin-left: 3vw;
@@ -1385,7 +1361,7 @@ button, input, optgroup, select, textarea {
     margin-left: -2.2vw;
     margin-bottom: -2vh;
 }
-#pickup #paragraft2 #button {
+#pickup #paragraft2 #text #button {
     background-color: #18a4fc;
     border: none;
     color: #fff;;
@@ -1393,13 +1369,12 @@ button, input, optgroup, select, textarea {
     padding: 5px 250px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
     font-size: 18px;
     margin: -15px 12px;
     cursor: pointer;
     position: absolute;
-    top: 60%;
     left: 50%;
+    margin-top: 12vh;
 }
 #pickup #paragraft2 #button a{
     text-decoration: none;
@@ -1445,6 +1420,16 @@ button, input, optgroup, select, textarea {
     margin-top: 5vh;
     margin-bottom: 5vh;
     margin-right: 5vw;
+}
+#pickup #paragraft2 #text h1{
+    font-weight: bolder;
+    font-size: 25px;
+}
+#pickup #paragraft2 #text h2{
+    font-size: 18px;
+}
+#pickup #paragraft2 #text {
+    margin-left: 1vw;
 }
 /* ini paymenttt ======================================================================================*/
 #payment{
@@ -1944,3 +1929,27 @@ input[type=radio] + label>img {
 #recoverypass #page #image{
     text-align: center;
 }
+
+/* ADMIN ADMIN ADMIN ===================================================================================== */
+#adminTable {
+    border-collapse: collapse;
+    /* width: 120%; */
+    overflow: scroll;
+    overflow:auto;
+  }
+
+  #adminTable td, #adminTable th {
+    border: 0.1px solid #ddd;
+    padding: 8px;
+  }
+
+  #adminTable tr:hover {background-color: #e0f4fc;}
+
+  #adminTable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #fff;
+    color: black;
+    /* width: 80px; */
+  }
