--- a/public/style.css
+++ b/public/style.css
@@ -1812,15 +1812,45 @@ input[type=radio] + label>img {
 /* ini admin check order=============================================================================== */
 #admin {
     display: flex;
+    flex-direction: column;
 }
 #admin #flex img {
     width: auto;
-    height: 15%;
+    height: 10%;
     position: absolute;
-    top: 7%;
-    left: 3%;
+    margin-left: 1vw;
+    margin-top: 1vh;
 }
-.judulku .kotak{
+#admin #flex {
+    display: flex;
+    flex-direction: row;
+}
+#admin #flex #judul{
+    margin-left: 7.5vw;
+    margin-top: 2.4vh;
+}
+#admin #flex #judul h1{
+    font-size: 26px;
+}
+#admin #flex #judul h3{
+    font-size: 16px;
+}
+#admin #flex #exit{
+    display: flex;
+}
+#admin #flex #exit img{
+    margin-left: 63vw;
+    height: 4%;
+    margin-top: 3.5vh;
+}
+#admin #flex #exit a{
+    margin-left: 65.5vw;
+    margin-top: 4vh;
+    text-decoration: none;
+    color: #18a4fc;
+    font-weight: bold;
+}
+/* .judulku .kotak{
     align-items: center;
     border-radius: 10px;
     border: 3px solid #18a4fc;
@@ -1830,7 +1860,7 @@ input[type=radio] + label>img {
     background-color: white;
     margin-top : 30px;
     margin-left: 30px;
-}
+} */
 #admin .col-sm-10{
     padding-right: 3vw;
 }
@@ -1838,7 +1868,7 @@ input[type=radio] + label>img {
     padding: 0.5vh;
     border: 2px solid #18a4fc;
     border-radius: 0.4rem;
-    width: 300px;
+    width: 50px;
 }
 #admin .col-form-label{
     font-family: Nunito;
@@ -1862,8 +1892,52 @@ input[type=radio] + label>img {
 #admin #kotak{
     display: flex;
     flex-direction: column;
-    margin-top: 4vh;
-    margin-left: 3vw;
+    margin-top: 3vh;
+    margin-left: 2vw;
+}
+#admin path{
+    width: 20px;
+    height: 20px;
+}
+#admin #kotak #textpage{
+    margin-top : 1vh;
+}
+#admin #kotak #textpage h2{
+    font-size: 15px;
+    font-weight: 100;
+}
+#admin #kotak #textpage h3{
+    font-size: 15px;
+    font-weight: 100;
+}
+#admin #kotak #textpage h3{
+    font-size: 15px;
+    font-weight: 100;
+}
+#admin #kotak #textpage a{
+    font-size: 15px;
+    text-decoration: none;
+    color: #18a4fc;
+    align-items: center;
+}
+#admin #kotak #textpage span{
+    font-size: 15px;
+    text-decoration: none;
+}
+#admin #kotak #textpage #tengah{
+    /* margin-left: 42vw; */
+    margin-bottom: 100vh;
+    text-align: center;
+}
+#admin #kotak #textpage #tengah p{
+    margin-bottom: 100vh;
+}
+/* #admin #kotak #textpage p{
+    text-align: center;
+    margin-right: 20vw;
+} */
+#admin #kotak #textpage .flex .justify-between .flex-1 .sm:hidden{
+    margin-left: 5vw;
 }
 /* paymentreceived=============================================================================== */
 #paymentreceived{
@@ -1931,6 +2005,11 @@ input[type=radio] + label>img {
 }
 
 /* ADMIN ADMIN ADMIN ===================================================================================== */
+#admin{
+    overflow: hidden;
+    margin-right: 20px;
+}
+
 #adminTable {
     border-collapse: collapse;
     /* width: 120%; */
@@ -1956,3 +2035,59 @@ input[type=radio] + label>img {
 
     /* width: 80px; */
   }
+
+  #adminTable #button a{
+    height: 50px;
+    background: #18a4fc;
+    color: #fff;
+    font-weight: bold;
+    font-size: 14px;
+    padding: 5px 2vh;
+    border-radius: 6px;
+    border: 2px solid #18a4fc;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    text-decoration: none;
+    margin-bottom: 1000px
+}
+#adminTable #button a:hover{
+    color: #18a4fc;
+    background: none;
+}
+/* EDIT PESANANANNNNNNNNN =======================================================================================================*/
+#adminedit #flex img {
+    width: auto;
+    height: 10%;
+    position: absolute;
+    margin-left: 1vw;
+    margin-top: 1vh;
+}
+#adminedit #flex {
+    display: flex;
+    flex-direction: row;
+}
+#adminedit #flex #judul{
+    margin-left: 7.5vw;
+    margin-top: 2.4vh;
+}
+#adminedit #flex #judul h1{
+    font-size: 26px;
+}
+#adminedit #flex #judul h3{
+    font-size: 16px;
+}
+#adminedit #flex #exit{
+    display: flex;
+}
+#adminedit #flex #exit img{
+    margin-left: 63vw;
+    height: 4%;
+    margin-top: 3.5vh;
+}
+#adminedit #flex #exit a{
+    margin-left: 65.5vw;
+    margin-top: 4vh;
+    text-decoration: none;
+    color: #18a4fc;
+    font-weight: bold;
+}
